# mailina

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: main.rs
src/app/cli/: configure.rs  credentials.rs  direct.rs  execute.rs  help.rs  initialize.rs  keywords.rs  mod.rs  route.rs
src/domain/: catalog.rs  credential.rs  destination.rs  lexicon.rs  mailbox.rs  message.rs  mod.rs  profile.rs  settings.rs
src/domain/fleet/: audit.rs  compose.rs  mod.rs  survey.rs
src/domain/mailbox/: document.rs  historical.rs  mod.rs  read.rs
src/io/: disk.rs  mod.rs  net.rs
