[package]
name = "mailina"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-imap = { version = "0.9" }
async-native-tls = { version = "0.5" }
openssl = { version = "0.10", features = ["vendored"] }
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.11", features = ["json"] }
colored = "2.1"
mailparse = "0.14"
